<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary30"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:includeFontPadding="false"
        android:text="@string/find_tickets_around_you"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="18dp">

            <EditText
                android:id="@+id/editTextKeyword"
                android:layout_width="376dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:autofillHints="keyword"
                android:hint="@string/event_type_or_keyword_to_search"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#B6B0B0"
                app:layout_constraintBottom_toTopOf="@+id/editTextCity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="278dp"
                android:layout_height="49dp"
                android:autofillHints="Enter City"
                android:hint="@string/enter_city"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#B6B0B0"
                app:layout_constraintBottom_toTopOf="@+id/recyclerViewEvents"
                app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextKeyword" />

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/searchs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextKeyword"
                app:toggleCheckedStateOnClick="false" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewEvents"
                android:layout_width="390dp"
                android:layout_height="585dp"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/back_main"
                android:layout_width="86dp"
                android:layout_height="40dp"
                android:layout_marginTop="690dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#FFFFFF"
                android:text="back"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="395dp" />

    <TextView
        android:id="@+id/noResultText"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="171dp"
        android:gravity="center"
        android:text="@string/no_results_found"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>