<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D8D8D8"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/Cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E4D5D5">

            <ImageView
                android:id="@+id/person_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.432"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.068"
                tools:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/eventNameText"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#2D81C3"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person_icon"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/addressText"
                android:layout_width="363dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="19dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/venueText"
                tools:text="Male" />

            <TextView
                android:id="@+id/venueText"
                android:layout_width="363dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="19dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventNameText"
                tools:text="john.doe@gmail.com" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="363dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:text="@string/date"
                android:textColor="#309534"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressText" />

            <TextView
                android:id="@+id/priceRangeText"
                android:layout_width="217dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/price_range"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateText" />

            <Button
                android:id="@+id/buttonTicket"
                android:layout_width="114dp"
                android:layout_height="49dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#2689D8"
                android:text="@string/see_tickets"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressText" />

            <Button
                android:id="@+id/eventDescriptionButton"
                android:layout_width="130dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:text="@string/event_description"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceRangeText" />

            <Button
                android:id="@+id/like_button"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#CF7272"
                app:icon="@android:drawable/btn_star"
                app:iconGravity="top"
                app:iconSize="18dp"
                app:iconTint="#FFE500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>